--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ p{
 
 .housing-div {
    display: flex;
-   height: 795px;
+   min-height: 100px;
    width: 892px;
    margin-top: 30px;
    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.05);
