--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
    margin: 0;
    background-color: #F5F8FA;
    font-family: lato, Arial, Helvetica, sans-serif;
-   padding-bottom: 139px;
+   padding-bottom: 30px;
 }
 
 p{
@@ -17,7 +17,7 @@ p{
 
 .housing-div {
    display: flex;
-   min-height: 100px;
+   height: 795px;
    width: 892px;
    margin-top: 30px;
    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.05);
